# SuperfastSync

./: .gitignore  CLAUDE.md  README.md  SECURITY.md  pyproject.toml  test_env.py
app/: __init__.py  __main__.py  benchmarks.py  routes.py  server.py  synthetic.py
app/static/css/: style.css
app/static/js/: upload.js
app/templates/: base.html  dashboard.html  index.html  login.html
