[project]
name = "superfastsync"
version = "0.1.0"
description = "A file server benchmarking application for testing upload/download performance"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
dependencies = [
    "flask>=3.0.0",
    "werkzeug>=3.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
